# apache-beam-fasttrack

./: README.md
ai_cursor_test_proj/: Dockerfile  README.md  acapella_model.h5  acapella_model.keras  ai_arranger.py  app.js  app.py  create_model.py  index.html  pyproject.toml
ai_cursor_test_proj/static/: app.js  styles.css
ai_cursor_test_proj/templates/: index.html
